manifests/apps/gluetun/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "gluetun"
  namespace: "gluetun"
  labels:
    app.kubernetes.io/name: "gluetun"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "gluetun"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "gluetun"
    spec:
      containers:
        - name: "prowlarr"
          image: "lscr.io/linuxserver/prowlarr:latest"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 9696
              protocol: "TCP"
          startupProbe:
            tcpSocket:
              port: 9696
          readinessProbe:
            tcpSocket:
              port: 9696
          livenessProbe:
            tcpSocket:
              port: 9696
          volumeMounts:
            - mountPath: "/config"
              name: "prowlarr-config"

        - name: "qbittorrent"
          image: "lscr.io/linuxserver/qbittorrent:latest"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
              protocol: "TCP"
          startupProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          volumeMounts:
            - mountPath: "/config"
              name: "qbittorrent-config"
            - mountPath: "/media"
              name: "qbittorrent-media"

      volumes:
        - name: "gluetun"
          persistentVolumeClaim:
            claimName: "gluetun"
        - name: "unbound"
          configMap:
            name: "unbound"
            defaultMode: 0644
        - name: "prowlarr-config"
          persistentVolumeClaim:
            claimName: "prowlarr-config"
        - name: "qbittorrent-config"
          persistentVolumeClaim:
            claimName: "qbittorrent-config"
        - name: "qbittorrent-media"
          persistentVolumeClaim:
            claimName: "qbittorrent-media"
