manifests/apps/gluetun/services.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "prowlarr"
  namespace: "gluetun"
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 9696
      targetPort: 9696
      protocol: "TCP"
      name: "prowlarr"
---
apiVersion: v1
kind: Service
metadata:
  name: "qbittorrent"
  namespace: "gluetun"
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 8080
      targetPort: 8080
      protocol: "TCP"
      name: "qbittorrent"
---
apiVersion: v1
kind: Service
metadata:
  name: "gluetun-lb"
  namespace: "gluetun"
  labels:
    ip-pool: "static"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.61"
spec:
  type: "LoadBalancer"
  loadBalancerClass: "io.cilium/l2-announcer"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 80
      targetPort: 8000
      protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: "prowlarr-lb"
  namespace: "gluetun"
  labels:
    ip-pool: "static"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.60"
spec:
  type: "LoadBalancer"
  loadBalancerClass: "io.cilium/l2-announcer"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 80
      targetPort: 9696
      protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: "qbittorrent-lb"
  namespace: "gluetun"
  labels:
    ip-pool: "static"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.62"
spec:
  type: "LoadBalancer"
  loadBalancerClass: "io.cilium/l2-announcer"
  selector:
    app.kubernetes.io/name: "gluetun"
  ports:
    - port: 80
      targetPort: 8080
      protocol: "TCP"
